--- a/src/AplicacionNavegacion/FXMLinisesion.fxml
+++ b/src/AplicacionNavegacion/FXMLinisesion.fxml
@@ -4,15 +4,15 @@
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
-<?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="500.0" prefWidth="650.0" style="-fx-background-radius: 16;" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.IniSesionController">
+
+<VBox alignment="CENTER" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.IniSesionController">
    <children>
-      <StackPane layoutX="50.0" layoutY="50.0" prefHeight="400.0" prefWidth="550.0" style="-fx-background-radius: 16;">
+      <StackPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="550.0" style="-fx-background-radius: 16;">
          <children>
             <VBox alignment="CENTER" prefHeight="389.0" prefWidth="540.0" spacing="20.0" style="-fx-background-color: #C98EB7; -fx-background-radius: 20; -fx-padding: 30;">
                <children>
@@ -49,4 +49,4 @@
          </children>
       </StackPane>
    </children>
-</AnchorPane>
+</VBox>
