--- a/src/AplicacionNavegacion/FXMLinisesion.fxml
+++ b/src/AplicacionNavegacion/FXMLinisesion.fxml
@@ -1,47 +1,107 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.PasswordField?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.HBox?>
 <?import javafx.scene.layout.StackPane?>
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-
-<VBox alignment="CENTER" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.IniSesionController">
+<VBox alignment="CENTER" styleClass="root" stylesheets="@Registro.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.IniSesionController">
    <children>
-      <StackPane maxWidth="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="550.0" style="-fx-background-radius: 16;">
+      <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="550.0" style="-fx-background-radius: 16;" styleClass="root" stylesheets="@Registro.css">
          <children>
-            <VBox alignment="CENTER" prefHeight="389.0" prefWidth="540.0" spacing="20.0" style="-fx-background-color: #C98EB7; -fx-background-radius: 20; -fx-padding: 30;">
+            <VBox alignment="CENTER" prefHeight="389.0" prefWidth="540.0" spacing="20.0" styleClass="card" stylesheets="@Registro.css">
                <children>
-                  <Label text="INICIAR SESIÓN" textFill="WHITE">
+                  <Label styleClass="title-text" stylesheets="@Registro.css" text="INICIAR SESIÓN" textFill="WHITE">
                      <font>
                         <Font name="System Bold" size="28.0" />
                      </font>
                   </Label>
-                  <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0" spacing="10.0" style="-fx-background-color: #ECD2E8; -fx-background-radius: 15; -fx-padding: 8 15;">
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <Label style="-fx-font-size: 16;" text="👤" textFill="#c98eb7" />
-                        <TextField fx:id="emailField" prefHeight="29.0" prefWidth="336.0" promptText="Nombre de usuario" style="-fx-background-color: transparent; -fx-font-size: 14;" />
+                        <VBox alignment="BOTTOM_LEFT" prefHeight="15.0" prefWidth="425.0">
+                           <children>
+                              <Label styleClass="form-label" stylesheets="@Registro.css" text="Usuario" />
+                           </children>
+                           <VBox.margin>
+                              <Insets bottom="5.0" left="45.0" />
+                           </VBox.margin>
+                        </VBox>
+                        <HBox alignment="CENTER" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="48.0" prefWidth="400.0" style="-fx-background-color: #ECD2E8; -fx-background-radius: 15; -fx-padding: 8 15;" styleClass="input-field">
+                           <children>
+                              <Label style="-fx-font-size: 16;" text="👤" textFill="#c98eb7" />
+                              <TextField fx:id="emailField" prefHeight="29.0" prefWidth="313.0" promptText="Usuario" style="-fx-background-color: transparent; -fx-font-size: 14;" />
+                              <HBox alignment="CENTER_RIGHT" prefHeight="33.0" prefWidth="38.0">
+                                 <children>
+                                    <ImageView fx:id="iconoError" fitHeight="33.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                                       <image>
+                                          <Image url="@../icons/6bf4fb28-513a-4fa8-a0bc-f6d9043b2613.png" />
+                                       </image>
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                    </ImageView>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </HBox>
                      </children>
-                  </HBox>
-                  <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0" spacing="10.0" style="-fx-background-color: #ECD2E8; -fx-background-radius: 15; -fx-padding: 8 15;">
+                  </VBox>
+                  <VBox alignment="CENTER" prefHeight="200.0" prefWidth="100.0">
                      <children>
-                        <Label style="-fx-font-size: 16;" text="🔒" textFill="#c98eb7" />
-                        <PasswordField fx:id="passwordField" prefHeight="25.0" prefWidth="336.0" promptText="Contraseña" style="-fx-background-color: transparent;">
-                           <font>
-                              <Font size="14.0" />
-                           </font>
-                        </PasswordField>
+                        <VBox alignment="BOTTOM_LEFT" prefHeight="200.0" prefWidth="100.0">
+                           <children>
+                              <Label styleClass="form-label" text="Contraseña">
+                                 <VBox.margin>
+                                    <Insets />
+                                 </VBox.margin>
+                              </Label>
+                           </children>
+                           <VBox.margin>
+                              <Insets bottom="5.0" left="45.0" />
+                           </VBox.margin>
+                        </VBox>
+                        <HBox alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="45.0" prefWidth="400.0" style="-fx-background-color: #ECD2E8; -fx-background-radius: 15; -fx-padding: 8 15;" styleClass="input-field">
+                           <children>
+                              <Label style="-fx-font-size: 16;" text="🔒" textFill="#c98eb7" />
+                              <PasswordField fx:id="passwordField" prefHeight="29.0" prefWidth="314.0" promptText="Contraseña" style="-fx-background-color: transparent;">
+                                 <font>
+                                    <Font size="14.0" />
+                                 </font>
+                              </PasswordField>
+                              <HBox alignment="CENTER_RIGHT" prefHeight="33.0" prefWidth="38.0">
+                                 <children>
+                                    <ImageView fx:id="iconoError2" fitHeight="33.0" fitWidth="40.0" pickOnBounds="true" preserveRatio="true" visible="false">
+                                       <image>
+                                          <Image url="@../icons/6bf4fb28-513a-4fa8-a0bc-f6d9043b2613.png" />
+                                       </image>
+                                       <HBox.margin>
+                                          <Insets />
+                                       </HBox.margin>
+                                    </ImageView>
+                                 </children>
+                              </HBox>
+                           </children>
+                        </HBox>
                      </children>
-                  </HBox>
-                  <Button fx:id="bAceptar" mnemonicParsing="false" onAction="#onAceptar" prefHeight="36.0" prefWidth="183.0" style="-fx-background-color: #555F76; -fx-background-radius: 15; -fx-padding: 8 25; -fx-font-size: 14; -fx-font-weight: bold; -fx-cursor: hand;" text="INICIAR SESIÓN" textFill="WHITE" />
+                  </VBox>
+                  <Button fx:id="bAceptar" mnemonicParsing="false" onAction="#onAceptar" prefHeight="36.0" prefWidth="183.0" styleClass="button-aceptar" stylesheets="@Registro.css" text="INICIAR SESIÓN" textFill="WHITE" />
                   <VBox alignment="CENTER" prefHeight="43.0" prefWidth="540.0">
                      <children>
-                        <Label text="¿Aún no te has registrado?" textFill="WHITE" />
-                        <Label fx:id="bRegister" onMouseClicked="#onRegister" style="-fx-underline: true; -fx-cursor: hand;" text="Registrarse" textFill="#b6e2e7" />
+                        <Label text="¿Aún no te has registrado?" textFill="#c98eb7">
+                           <font>
+                              <Font size="14.0" />
+                           </font></Label>
+                        <Label fx:id="bRegister" onMouseClicked="#onRegister" style="-fx-underline: true; -fx-cursor: hand; -fx-font-weight: bold;" text="Registrarse" textFill="#9bbfc9">
+                           <font>
+                              <Font size="14.0" />
+                           </font></Label>
                      </children>
                   </VBox>
                </children>
