--- a/src/AplicacionNavegacion/VentanaModificarPerfil.fxml
+++ b/src/AplicacionNavegacion/VentanaModificarPerfil.fxml
@@ -15,7 +15,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<VBox alignment="CENTER" styleClass="root" stylesheets="@Registro.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.VentanaRegistroController">
+<VBox alignment="CENTER" styleClass="root" stylesheets="@Registro.css" xmlns="http://javafx.com/javafx/24.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="AplicacionNavegacion.VentanaModificarPerfil">
    <children>
       <StackPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="555.0" prefWidth="809.0">
          <children>
@@ -81,19 +81,19 @@
                                     <Image url="@../resources/default.png" />
                                  </image>
                               </ImageView>
-                              <Button fx:id="elegirAvatar" mnemonicParsing="false" onAction="#handleChooseAvatar" prefHeight="40.0" prefWidth="156.0" style="-fx-background-color: #555F76;" styleClass="button-primary" text="ELEGIR AVATAR" />
+                              <Button fx:id="elegirAvatar" mnemonicParsing="false" onAction="#handleChooseAvatar" prefHeight="40.0" prefWidth="156.0" styleClass="button-avatar" text="ELEGIR AVATAR" />
                            </children>
                         </VBox>
                      </children>
                   </HBox>
                   <HBox alignment="BOTTOM_RIGHT" prefHeight="153.0" prefWidth="720.0" spacing="20.0">
                      <children>
-                        <Button fx:id="bAccept" mnemonicParsing="false" onAction="#handleBAcceptOnAction" style="-fx-background-color: #555F76;" styleClass="button-primary" text="MODIFICAR">
+                        <Button fx:id="bAccept" mnemonicParsing="false" onAction="#handleBAcceptOnAction" styleClass="button-aceptar" text="MODIFICAR">
                            <graphic>
                               <ImageView fitHeight="36.0" fitWidth="30.0" pickOnBounds="true" preserveRatio="true" />
                            </graphic>
                         </Button>
-                        <Button fx:id="bCancel" mnemonicParsing="false" onAction="#handleCancel" styleClass="button-secondary" text="CANCELAR">
+                        <Button fx:id="bCancel" mnemonicParsing="false" onAction="#handleCancel" styleClass="button-cancelar" text="CANCELAR">
                            <graphic>
                               <ImageView fitHeight="35.0" fitWidth="33.0" pickOnBounds="true" preserveRatio="true" />
                            </graphic>
