--- a/src/AplicacionNavegacion/FXMLVentanaMapa.fxml
+++ b/src/AplicacionNavegacion/FXMLVentanaMapa.fxml
@@ -199,7 +199,7 @@
       <StackPane fx:id="stackRoot" alignment="TOP_CENTER" VBox.vgrow="ALWAYS">
          <children>
       
-                                                  <HBox fx:id="zoomBar" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" onMouseDragged="#onZoomMouseDragged" onMousePressed="#onZoomMousePressed" prefHeight="50.0" prefWidth="280.0" spacing="10.0" style="-fx-background-color: lightgrey;">
+                                                  <HBox fx:id="zoomBar" alignment="CENTER_LEFT" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="50.0" prefWidth="280.0" spacing="10.0" style="-fx-background-color: lightgrey;">
                   <children>
                       <Label text="Zoom">
                      <HBox.margin>
