--- a/src/AplicacionNavegacion/FXMLVentanaMapa.fxml
+++ b/src/AplicacionNavegacion/FXMLVentanaMapa.fxml
@@ -129,7 +129,7 @@
                                 </ImageView>
                             </graphic>
                         </ToggleButton>
-                        <Button fx:id="menosG" maxHeight="30.0" maxWidth="50.0" minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#masOpLapiz" prefHeight="30.0" prefWidth="50.0" text="-">
+                        <Button fx:id="menosG" maxHeight="30.0" maxWidth="50.0" minHeight="30.0" minWidth="50.0" mnemonicParsing="false" onAction="#menosGrosor" prefHeight="30.0" prefWidth="50.0" text="-">
                             <font><Font size="10.0" /></font>
                         </Button>
                         <Slider fx:id="grosorSlider" max="12.0" min="1.0" prefWidth="120.0" value="2.0" />
